RESOLVED FIXED137898
Action menu items should have tags
https://bugs.webkit.org/show_bug.cgi?id=137898
Summary Action menu items should have tags
Beth Dakin
Reported 2014-10-20 16:09:38 PDT
Action menu items should have tags.
Attachments
Patch (8.45 KB, patch)
2014-10-20 16:11 PDT, Beth Dakin
andersca: review+
Beth Dakin
Comment 1 2014-10-20 16:11:23 PDT
WebKit Commit Bot
Comment 2 2014-10-20 16:12:38 PDT
Attachment 240156 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/API/mac/WKView.mm:58: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Beth Dakin
Comment 3 2014-10-20 16:14:09 PDT
(In reply to comment #2) > Attachment 240156 [details] did not pass style-queue: > > > ERROR: Source/WebKit2/UIProcess/API/mac/WKView.mm:58: Alphabetical sorting > problem. [build/include_order] [4] > Total errors found: 1 in 4 files > > > If any of these errors are false positives, please file a bug against > check-webkit-style. Fixed!
Anders Carlsson
Comment 4 2014-10-20 16:19:39 PDT
Comment on attachment 240156 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=240156&action=review > Source/WebKit2/Shared/API/c/WKActionMenuItemTypes.h:41 > +typedef uint32_t WKActionMenuItemTag; I don't think we need this typedef, do we!
Beth Dakin
Comment 5 2014-10-20 16:26:35 PDT
(In reply to comment #4) > Comment on attachment 240156 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=240156&action=review > > > Source/WebKit2/Shared/API/c/WKActionMenuItemTypes.h:41 > > +typedef uint32_t WKActionMenuItemTag; > > I don't think we need this typedef, do we! Good point! http://trac.webkit.org/changeset/174913 Thanks Anders!
Joseph Pecoraro
Comment 6 2014-10-20 16:29:21 PDT
Comment on attachment 240156 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=240156&action=review > Source/WebKit2/Shared/API/c/WKActionMenuItemTypes.h:29 > +#include <stdint.h> Does that mean this include can go away too?
Note You need to log in before you can comment on or make changes to this bug.