Action menu items should have tags https://bugs.webkit.org/show_bug.cgi?id=137898

Reviewed by Anders Carlsson.

* Shared/API/c/WKActionMenuItemTypes.h: Added.
* UIProcess/API/mac/WKView.mm:
(-[WKView _defaultMenuItemsForLink]):
* WebKit2.xcodeproj/project.pbxproj:



Canonical link: https://commits.webkit.org/155763@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@174913 268f45cc-cd09-0410-ab3c-d52691b4dbfc